# vcon-twilio-adapter

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: tests.yml
adapters/: __init__.py
adapters/asterisk/: __init__.py  builder.py  config.py  webhook.py
adapters/bandwidth/: __init__.py  builder.py  config.py  webhook.py
adapters/freeswitch/: __init__.py  builder.py  config.py  webhook.py
adapters/telnyx/: __init__.py  builder.py  config.py  webhook.py
adapters/twilio/: __init__.py  builder.py  config.py  webhook.py
core/: __init__.py  base_builder.py  base_config.py  poster.py  tracker.py
tests/: conftest.py  test_builder.py  test_config.py  test_poster.py  test_tracker.py  test_webhook.py
tests/adapters/asterisk/: test_builder.py  test_config.py  test_webhook.py
tests/adapters/bandwidth/: test_builder.py  test_config.py  test_webhook.py
tests/adapters/freeswitch/: test_builder.py  test_config.py  test_webhook.py
tests/adapters/telnyx/: test_builder.py  test_config.py  test_webhook.py
twilio_adapter/: __init__.py  builder.py  config.py  poster.py  tracker.py  webhook.py
